[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-actors = "4.2"
actix = "0.13"
rand = "0.8"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.2"
lazy_static = "1.4.0"