[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3" # Log formatlaması için
lazy_static = "1.4"
sysinfo = "0.31"